test/integration/bad/tuples/incomplete2.stan
data { tuple( array [ foo ] real foo
